--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h3> Good Bye </h3>
     <p> <b> APPLESAUCE </b></p>
     <a href= http://espn.go.com/> ESPN </a>
-    <img src="http://3.bp.blogspot.com/-LDDtB3KYJrQ/UGSSNQZ0dqI/AAAAAAAAAew/RpPaFa1iWQ4/s1600/Iowa_State_Logo.gif" height="200px" >
+    <p></p><img src="http://3.bp.blogspot.com/-LDDtB3KYJrQ/UGSSNQZ0dqI/AAAAAAAAAew/RpPaFa1iWQ4/s1600/Iowa_State_Logo.gif" height="200px" ></p>
   </body>
   
 </html>
