--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   
   <head>
-    <title> My First Page </title>
+    <title> Iowa State Men's Basketball </title>
   </head>
   
   <body>
-    <h1> Hello World </h1>
-    <h3> Good Bye </h3>
+    <h1> Iowa State Cyclones </h1>
+    <h3> Men's Basketball </h3>
     <p> <b> APPLESAUCE </b></p>
     <a href= http://espn.go.com/> ESPN </a>
     <p></p><img src="http://3.bp.blogspot.com/-LDDtB3KYJrQ/UGSSNQZ0dqI/AAAAAAAAAew/RpPaFa1iWQ4/s1600/Iowa_State_Logo.gif" height="200px" ></p>
