--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <body>
     <h1> Iowa State Cyclones </h1>
     <h3> Men's Basketball </h3>
-    <p> <b> APPLESAUCE </b></p>
-    <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> ESPN </a>
-    <p></p><img src="http://3.bp.blogspot.com/-LDDtB3KYJrQ/UGSSNQZ0dqI/AAAAAAAAAew/RpPaFa1iWQ4/s1600/Iowa_State_Logo.gif" height="200px" ></p>
+    <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
+    <img src="http://3.bp.blogspot.com/-LDDtB3KYJrQ/UGSSNQZ0dqI/AAAAAAAAAew/RpPaFa1iWQ4/s1600/Iowa_State_Logo.gif" height="200px">
+    
+    
   </body>
   
 </html>
