--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Iowa State Men's Basketball </title>
   </head>
   
-  <body bgcolor="red">
+  <body bgcolor="red" text="yellow" alink="blue">
     <h1> Iowa State Cyclones </h1>
     <h3> Men's Basketball </h3>
     <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
