--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
     body {
       background-image: url(http://www.nmnathletics.com.edgesuite.net/pics3/0/UX/UXDZMUPGOYZUQPC.20080214172052.jpg);
+      background-repeat no repeat
     }
     </style>
       <body text="yellow">
