--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     body {
       background-image: url(http://www.nmnathletics.com.edgesuite.net/pics3/0/UX/UXDZMUPGOYZUQPC.20080214172052.jpg);
       background-repeat:no-repeat;
+      background-size:cover;
     }
     </style>
       <body text="yellow">
