--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       background-image: url(http://www.nmnathletics.com.edgesuite.net/pics3/0/UX/UXDZMUPGOYZUQPC.20080214172052.jpg);
       background-repeat:no-repeat;
       background-size:cover;
+      background-position:center top;
     }
     </style>
       <body text="yellow">
