--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       background-image: url(http://www.nmnathletics.com.edgesuite.net/pics3/0/UX/UXDZMUPGOYZUQPC.20080214172052.jpg);
       background-repeat:no-repeat;
       background-size:cover;
-      background-position:center top;
+    }
+    h1, h3 {color:red;
     }
     </style>
       <body text="yellow">
