--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
       background-image: url(http://www.nmnathletics.com.edgesuite.net/pics3/0/UX/UXDZMUPGOYZUQPC.20080214172052.jpg);
       background-repeat:no-repeat;
       background-size:cover;
-      text-decoration-color: yellow;
     }
     h1, h3 {color:red;
     }
     </style>
-      <body>
+      <body color="yellow">
         <h1> Iowa State Cyclones </h1>
         <h3> Men's Basketball </h3>
         <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
