--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     h1, h3 {color:red;
     }
     </style>
-      <body color="yellow">
+      <body style="color:yellow">
         <h1> Iowa State Cyclones </h1>
         <h3> Men's Basketball </h3>
         <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
