--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,7 @@
     
   </style>
   <body>
-    <table>
+    <table border=1px cellspacing=0>
       <caption>My Weekly Schedule</caption>
       <tr>
         <th>Time</th>
