--- a/schedule.html
+++ b/schedule.html
@@ -23,9 +23,9 @@
         <td>8:00 AM</td>
         <td></td>
         <td></td>
-        <td colspand='4'>CS 165</td>
+        <td rowspan='4'>CS 165</td>
         <td></td>
-        <td colspand='4'>CS 165</td>
+        <td rowspan='4'>CS 165</td>
         <td></td>
         <td></td>
       </tr>
