--- a/schedule.html
+++ b/schedule.html
@@ -64,9 +64,9 @@
       <tr>
         <td>9:15 AM</td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan='4'>CS 160</td>
+        <td rowspan='4'>CS 160</td>
+        <td rowspan='4'>CS 160</td>
         <td></td>
       </tr>
       <tr>
@@ -75,15 +75,9 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>9:45 AM</td>
-        <td></td>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
