--- a/schedule.html
+++ b/schedule.html
@@ -98,11 +98,11 @@
       <tr>
         <td>11:00 AM</td>
         <td></td>
-        <td>CS 130</td>
+        <td rowspan='4'>CS 130</td>
         <td></td>
-        <td>CS 130</td>
+        <td rowspan='4'>CS 130</td>
         <td></td>
-        <td>CS 130</td>
+        <td rowspan='4'>CS 130</td>
         <td></td>
       </tr>
       <tr>
@@ -119,6 +119,13 @@
       </tr>
       <tr>
         <td>12:15 PM</td>
+        <td></td>
+        <td rowspan='4'>CS 220</td>
+        <td></td>
+        <td rowspan='4'>CS 220</td>
+        <td></td>
+        <td rowspan='4'>CS 220</td>
+        <td></td>
       </tr>
       <tr>
         <td>12:30 PM</td>
