--- a/schedule.html
+++ b/schedule.html
@@ -189,6 +189,7 @@
       </tr>
        <tr>
         <td> 5:30 PM</td>
+        <td colspan='7' rowspan='8'>Practice</td>
       </tr>
        <tr>
         <td> 5:45 PM</td>
