--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title><h1>My Schedule</h1></title
+    <title>My Schedule</title
   </head>
   <style>
     
@@ -8,7 +8,7 @@
   </style>
   <body>
     <table width='100%' border=1px cellspacing=0>
-      <caption>My Weekly Schedule</caption>
+      <caption><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th>Time</th>
         <th>Sunday</th>
