--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>My Schedule</title
+    <title>My Schedule</title>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <style>
     
