--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My Schedule</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <style>
     
