--- a/schedule.html
+++ b/schedule.html
@@ -28,19 +28,16 @@
         <td></td>
         <td rowspan='6'>CS 165</td>
         <td></td>
-        <td></td>
+        <td rowspan='8'>Practice</td>
       </tr>
       <tr>
         <td>8:15 AM</td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>8:30 AM</td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -52,11 +49,9 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>9:00 AM</td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -68,18 +63,15 @@
         <td rowspan='4'>CS 160</td>
         <td rowspan='4'>CS 160</td>
         <td rowspan='4'>CS 160</td>
-        <td></td>
       </tr>
       <tr>
         <td>9:30 AM</td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>9:45 AM</td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -366,34 +358,42 @@
       <tr>
         <td> 5:30 PM</td>
         <td></td>
-        <td colspan='6' rowspan='8'>Practice</td>
+        <td colspan='5' rowspan='8'>Practice</td>
+        <td></td>
       </tr>
       <tr>
         <td> 5:45 PM</td>
+        <td></td>
         <td></td>
       </tr>
       <tr>
         <td> 6:00 PM</td>
         <td></td>
+        <td></td>
       </tr>
       <tr>
         <td> 6:15 PM</td>
+        <td></td>
         <td></td>
       </tr>
       <tr>
         <td> 6:30 PM</td>
         <td></td>
+        <td></td>
       </tr>
       <tr>
         <td> 6:45 PM</td>
+        <td></td>
         <td></td>
       </tr>
       <tr>
         <td>7:00 PM</td>
         <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>7:15 PM</td>
+        <td></td>
         <td></td>
       </tr>
       <tr>
