--- a/schedule.html
+++ b/schedule.html
@@ -86,11 +86,11 @@
       <tr>
         <td>10:15 AM</td>
         <td></td>
+        <td rowspan='3'>Lunch</td>
         <td></td>
+        <td rowspan='3'>Lunch</td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan='3'>Lunch</td>
         <td></td>
       </tr>
       <tr>
@@ -99,15 +99,9 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>10:45 AM</td>
-        <td></td>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -139,30 +133,22 @@
       </tr>
       <tr>
         <td>11:45 AM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan='3'>Lunch</td>
+        <td rowspan='3'>Lunch</td>
+        <td rowspan='3'>Lunch</td>
+        <td rowspan='3'>Lunch</td>
       </tr>
       <tr>
         <td>12:00 PM</td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>12:15 PM</td>
-        <td></td>
         <td rowspan='4'>CS 220</td>
-        <td></td>
         <td rowspan='4'>CS 220</td>
-        <td></td>
         <td rowspan='4'>CS 220</td>
-        <td></td>
       </tr>
       <tr>
         <td>12:30 PM</td>
