--- a/schedule.html
+++ b/schedule.html
@@ -313,31 +313,16 @@
       </tr>
       <tr>
         <td> 4:45 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan='5' rowspan='3'>Dinner></td>
         <td></td>
       </tr>
       <tr>
         <td> 5:00 PM</td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 5:15 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
       </tr>
@@ -349,18 +334,14 @@
       </tr>
       <tr>
         <td> 5:45 PM</td>
-        <td></td>
-        <td></td>
+        <td rowspan='3'>Dinner</td>
+        <td rowspan='3'>Dinner</td>
       </tr>
       <tr>
         <td> 6:00 PM</td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 6:15 PM</td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 6:30 PM</td>
@@ -384,21 +365,11 @@
       </tr>
       <tr>
         <td>7:30 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan='5' rowspan='2'>Marty's</td>
         <td></td>
       </tr>
       <tr>
         <td>7:45 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
       </tr>
