--- a/schedule.html
+++ b/schedule.html
@@ -203,83 +203,28 @@
       </tr>
       <tr>
         <td> 2:00 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan='7' rowspan='8'></td>
       </tr>
       <tr>
         <td> 2:15 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 2:30 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 2:45 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 3:00 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 3:15 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 3:30 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 3:45 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td> 4:00 PM</td>
@@ -313,7 +258,8 @@
       </tr>
       <tr>
         <td> 4:45 PM</td>
-        <td colspan='5' rowspan='3'>Dinner></td>
+        <td></td>
+        <td colspan='5' rowspan='3'>Dinner</td>
         <td></td>
       </tr>
       <tr>
@@ -365,6 +311,7 @@
       </tr>
       <tr>
         <td>7:30 PM</td>
+        <td></td>
         <td colspan='5' rowspan='2'>Marty's</td>
         <td></td>
       </tr>
