--- a/schedule.html
+++ b/schedule.html
@@ -203,7 +203,7 @@
       </tr>
       <tr>
         <td> 2:00 PM</td>
-        <td colspan='7' rowspan='8'></td>
+        <td colspan='7' rowspan='8'>Study</td>
       </tr>
       <tr>
         <td> 2:15 PM</td>
