--- a/schedule.html
+++ b/schedule.html
@@ -21,7 +21,7 @@
         <th>Saturday</th>
       </tr>
       <tr>
-        <td>8:00 AM</td>
+        <td class='time'>8:00 AM</td>
         <td></td>
         <td></td>
         <td rowspan='6'>CS 165</td>
@@ -31,61 +31,61 @@
         <td rowspan='8'>Practice</td>
       </tr>
       <tr>
-        <td>8:15 AM</td>
+        <td class='time'>8:15 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>8:30 AM</td>
+        <td class='time'>8:30 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>8:45 AM</td>
+        <td class='time'>8:45 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>9:00 AM</td>
+        <td class='time'>9:00 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>9:15 AM</td>
+        <td class='time'>9:15 AM</td>
         <td></td>
         <td rowspan='4'>CS 160</td>
         <td rowspan='4'>CS 160</td>
         <td rowspan='4'>CS 160</td>
       </tr>
       <tr>
-        <td>9:30 AM</td>
+        <td class='time'>9:30 AM</td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>9:45 AM</td>
+        <td class='time'>9:45 AM</td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>10:00 AM</td>
+        <td class='time'>10:00 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>10:15 AM</td>
+        <td class='time'>10:15 AM</td>
         <td></td>
         <td rowspan='3'>Lunch</td>
         <td></td>
@@ -95,21 +95,21 @@
         <td></td>
       </tr>
       <tr>
-        <td>10:30 AM</td>
+        <td class='time'>10:30 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>10:45 AM</td>
+        <td class='time'>10:45 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>11:00 AM</td>
+        <td class='time'>11:00 AM</td>
         <td></td>
         <td rowspan='4'>CS 130</td>
         <td></td>
@@ -119,71 +119,61 @@
         <td></td>
       </tr>
       <tr>
-        <td>11:15 AM</td>
+        <td class='time'>11:15 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>11:30 AM</td>
+        <td class='time'>11:30 AM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>11:45 AM</td>
+        <td class='time'>11:45 AM</td>
         <td rowspan='3'>Lunch</td>
         <td rowspan='3'>Lunch</td>
         <td rowspan='3'>Lunch</td>
         <td rowspan='3'>Lunch</td>
       </tr>
       <tr>
-        <td>12:00 PM</td>
+        <td class='time'>12:00 PM</td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>12:15 PM</td>
+        <td class='time'>12:15 PM</td>
         <td rowspan='4'>CS 220</td>
         <td rowspan='4'>CS 220</td>
         <td rowspan='4'>CS 220</td>
       </tr>
       <tr>
-        <td>12:30 PM</td>
+        <td class='time'>12:30 PM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>12:45 PM</td>
+        <td class='time'>12:45 PM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>1:00 PM</td>
+        <td class='time'>1:00 PM</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>1:15 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>1:30 PM</td>
+        <td class='time'>1:15 PM</td>
         <td></td>
         <td></td>
         <td></td>
@@ -193,7 +183,7 @@
         <td></td>
       </tr>
       <tr>
-        <td>1:45 PM</td>
+        <td class='time'>1:30 PM</td>
         <td></td>
         <td></td>
         <td></td>
@@ -203,42 +193,42 @@
         <td></td>
       </tr>
       <tr>
-        <td> 2:00 PM</td>
+        <td class='time'>1:45 PM</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class='time'> 2:00 PM</td>
         <td colspan='7' rowspan='8'>Study</td>
       </tr>
       <tr>
-        <td> 2:15 PM</td>
+        <td class='time'> 2:15 PM</td>
       </tr>
       <tr>
-        <td> 2:30 PM</td>
+        <td class='time'> 2:30 PM</td>
       </tr>
       <tr>
-        <td> 2:45 PM</td>
+        <td class='time'> 2:45 PM</td>
       </tr>
       <tr>
-        <td> 3:00 PM</td>
+        <td class='time'> 3:00 PM</td>
       </tr>
       <tr>
-        <td> 3:15 PM</td>
+        <td class='time'> 3:15 PM</td>
       </tr>
       <tr>
-        <td> 3:30 PM</td>
+        <td class='time'> 3:30 PM</td>
       </tr>
       <tr>
-        <td> 3:45 PM</td>
+        <td class='time'> 3:45 PM</td>
       </tr>
       <tr>
-        <td> 4:00 PM</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td> 4:15 PM</td>
+        <td class='time'> 4:00 PM</td>
         <td></td>
         <td></td>
         <td></td>
@@ -248,7 +238,7 @@
         <td></td>
       </tr>
       <tr>
-        <td> 4:30 PM</td>
+        <td class='time'> 4:15 PM</td>
         <td></td>
         <td></td>
         <td></td>
@@ -258,66 +248,76 @@
         <td></td>
       </tr>
       <tr>
-        <td> 4:45 PM</td>
+        <td class='time'> 4:30 PM</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class='time'> 4:45 PM</td>
         <td></td>
         <td colspan='5' rowspan='3'>Dinner</td>
         <td></td>
       </tr>
       <tr>
-        <td> 5:00 PM</td>
+        <td class='time'> 5:00 PM</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td> 5:15 PM</td>
+        <td class='time'> 5:15 PM</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td> 5:30 PM</td>
+        <td class='time'> 5:30 PM</td>
         <td></td>
         <td colspan='5' rowspan='8'>Practice</td>
         <td></td>
       </tr>
       <tr>
-        <td> 5:45 PM</td>
+        <td class='time'> 5:45 PM</td>
         <td rowspan='3'>Dinner</td>
         <td rowspan='3'>Dinner</td>
       </tr>
       <tr>
-        <td> 6:00 PM</td>
+        <td class='time'> 6:00 PM</td>
       </tr>
       <tr>
-        <td> 6:15 PM</td>
+        <td class='time'> 6:15 PM</td>
       </tr>
       <tr>
-        <td> 6:30 PM</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td> 6:45 PM</td>
+        <td class='time'> 6:30 PM</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>7:00 PM</td>
+        <td class='time'> 6:45 PM</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>7:15 PM</td>
+        <td class='time'>7:00 PM</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>7:30 PM</td>
+        <td class='time'>7:15 PM</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class='time'>7:30 PM</td>
         <td></td>
         <td colspan='5' rowspan='2'>Marty's</td>
         <td></td>
       </tr>
       <tr>
-        <td>7:45 PM</td>
+        <td class='time'>7:45 PM</td>
         <td></td>
         <td></td>
       </tr>
