--- a/schedule.html
+++ b/schedule.html
@@ -24,11 +24,11 @@
         <td class='time'>8:00 AM</td>
         <td></td>
         <td></td>
-        <td rowspan='6'>CS 165</td>
+        <td class='class' rowspan='6'>CS 165</td>
         <td></td>
-        <td rowspan='6'>CS 165</td>
+        <td class='class' rowspan='6'>CS 165</td>
         <td></td>
-        <td rowspan='8'>Practice</td>
+        <td class='practice' rowspan='8'>Practice</td>
       </tr>
       <tr>
         <td class='time'>8:15 AM</td>
@@ -61,9 +61,9 @@
       <tr>
         <td class='time'>9:15 AM</td>
         <td></td>
-        <td rowspan='4'>CS 160</td>
-        <td rowspan='4'>CS 160</td>
-        <td rowspan='4'>CS 160</td>
+        <td class='class' rowspan='4'>CS 160</td>
+        <td class='class' rowspan='4'>CS 160</td>
+        <td class='class' rowspan='4'>CS 160</td>
       </tr>
       <tr>
         <td class='time'>9:30 AM</td>
@@ -87,11 +87,11 @@
       <tr>
         <td class='time'>10:15 AM</td>
         <td></td>
-        <td rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
         <td></td>
-        <td rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
         <td></td>
-        <td rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
         <td></td>
       </tr>
       <tr>
@@ -111,11 +111,11 @@
       <tr>
         <td class='time'>11:00 AM</td>
         <td></td>
-        <td rowspan='4'>CS 130</td>
+        <td class='class' rowspan='4'>CS 130</td>
         <td></td>
-        <td rowspan='4'>CS 130</td>
+        <td class='class' rowspan='4'>CS 130</td>
         <td></td>
-        <td rowspan='4'>CS 130</td>
+        <td class='class' rowspan='4'>CS 130</td>
         <td></td>
       </tr>
       <tr>
@@ -134,10 +134,10 @@
       </tr>
       <tr>
         <td class='time'>11:45 AM</td>
-        <td rowspan='3'>Lunch</td>
-        <td rowspan='3'>Lunch</td>
-        <td rowspan='3'>Lunch</td>
-        <td rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
+        <td class='food' rowspan='3'>Lunch</td>
       </tr>
       <tr>
         <td class='time'>12:00 PM</td>
@@ -147,9 +147,9 @@
       </tr>
       <tr>
         <td class='time'>12:15 PM</td>
-        <td rowspan='4'>CS 220</td>
-        <td rowspan='4'>CS 220</td>
-        <td rowspan='4'>CS 220</td>
+        <td class='class' rowspan='4'>CS 220</td>
+        <td class='class' rowspan='4'>CS 220</td>
+        <td class='class' rowspan='4'>CS 220</td>
       </tr>
       <tr>
         <td class='time'>12:30 PM</td>
@@ -204,7 +204,7 @@
       </tr>
       <tr>
         <td class='time'> 2:00 PM</td>
-        <td colspan='7' rowspan='8'>Study</td>
+        <td class='study' colspan='7' rowspan='8'>Study</td>
       </tr>
       <tr>
         <td class='time'> 2:15 PM</td>
@@ -260,7 +260,7 @@
       <tr>
         <td class='time'> 4:45 PM</td>
         <td></td>
-        <td colspan='5' rowspan='3'>Dinner</td>
+        <td class='food' colspan='5' rowspan='3'>Dinner</td>
         <td></td>
       </tr>
       <tr>
@@ -276,13 +276,13 @@
       <tr>
         <td class='time'> 5:30 PM</td>
         <td></td>
-        <td colspan='5' rowspan='8'>Practice</td>
+        <td class='practice' colspan='5' rowspan='8'>Practice</td>
         <td></td>
       </tr>
       <tr>
         <td class='time'> 5:45 PM</td>
-        <td rowspan='3'>Dinner</td>
-        <td rowspan='3'>Dinner</td>
+        <td class='food' rowspan='3'>Dinner</td>
+        <td class='food' rowspan='3'>Dinner</td>
       </tr>
       <tr>
         <td class='time'> 6:00 PM</td>
@@ -313,7 +313,7 @@
       <tr>
         <td class='time'>7:30 PM</td>
         <td></td>
-        <td colspan='5' rowspan='2'>Marty's</td>
+        <td class='food' colspan='5' rowspan='2'>Marty's</td>
         <td></td>
       </tr>
       <tr>
