--- a/schedule.html
+++ b/schedule.html
@@ -11,14 +11,14 @@
     <table width='100%' border=1px cellspacing=0>
       <caption><h1>My Weekly Schedule</h1></caption>
       <tr>
-        <th>Time</th>
-        <th>Sunday</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
+        <th class='time'>Time</th>
+        <th class='day'>Sunday</th>
+        <th class='day'>Monday</th>
+        <th class='day'>Tuesday</th>
+        <th class='day'>Wednesday</th>
+        <th class='day'>Thursday</th>
+        <th class='day'>Friday</th>
+        <th class='day'>Saturday</th>
       </tr>
       <tr>
         <td class='time'>8:00 AM</td>
