--- a/schedule.html
+++ b/schedule.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <style>
-    
-    
+    body {
+      background-color: black;
+    }
   </style>
   <body>
     <table width='100%' border=1px cellspacing=0>
