--- a/schedule.html
+++ b/schedule.html
@@ -5,12 +5,12 @@
   </head>
   <style>
     body {
-      background-color: black;
+      background-color: #83FF59;
     }
   </style>
   <body>
     <table width='100%' border=1px cellspacing=0>
-      <caption><h1 color=#83FF59>My Weekly Schedule</h1></caption>
+      <caption><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
