--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
     }
   </style>
   <body>
-    <table width='100%' border= 2px text-align=center cellspacing=0>
+    <table width='100%' border= 2px color=#FF66FF text-align=center cellspacing=0>
       <caption><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th class='time'>Time</th>
