--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             <li>#42 Daniel Edozie</li>
           </ul>
         <br>
-        
+        <br>
+        <h3>Home Work Sectoin</h3>
+          <ul style="list-style-type:none">
+            <li><a href=http://whitna02.github.io/schedule.html> My Schedule </a></li>
+          </ul>
           
       </body>
   
