--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     h1, h3 {color:red;
     }
     </style>
-      <body text="yellow">
+      <body text="yellow" link="yellow">
         <h1> Iowa State Cyclones </h1>
         <h3> Men's Basketball </h3>
-        <body link="yellow">
         <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
         <p></p>
         
@@ -51,7 +50,6 @@
         <br>
         <h3>Home Work Sectoin</h3>
           <ul style="list-style-type:none">
-            <body link="yellow">
             <li><a href=http://whitna02.github.io/schedule.html> My Schedule </a></li>
           </ul>
           
