--- a/schedule.html
+++ b/schedule.html
@@ -9,10 +9,8 @@
     }
   </style>
   <body>
-    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
-      <caption><h1>My Weekly Schedule</h1></caption>
-      <br>
-      <br>
+    <h1>My Weekly Schedule</h1>
+    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>h1>My Weekly Schedule</h1>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
