--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,9 @@
   </style>
   <body>
     <h1>My Weekly Schedule</h1>
-    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>h1>My Weekly Schedule</h1>
+    <br>
+    <br>
+    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
