--- a/schedule.html
+++ b/schedule.html
@@ -9,9 +9,8 @@
     }
   </style>
   <body>
-    <h1>My Weekly Schedule</h1>
-    <br>
-    <br>
+    <p><h1>My Weekly Schedule</h1></p>
+    
     <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
       <tr>
         <th class='time'>Time</th>
