--- a/schedule.html
+++ b/schedule.html
@@ -9,8 +9,9 @@
     }
   </style>
   <body>
-    <p><h1>My Weekly Schedule</h1></p>
-    
+    <header>
+      <h1>My Weekly Schedule</h1>
+    </header>
     <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
       <tr>
         <th class='time'>Time</th>
