--- a/schedule.html
+++ b/schedule.html
@@ -9,9 +9,10 @@
     }
   </style>
   <body>
-    <header>
+    <header text-align=center>
       <h1>My Weekly Schedule</h1>
     </header>
+    
     <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
       <tr>
         <th class='time'>Time</th>
