--- a/schedule.html
+++ b/schedule.html
@@ -13,7 +13,7 @@
       <h1>My Weekly Schedule</h1>
     </header>
     
-    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0>
+    <table width='100%' border= 5px color=#FF66FF text-align=center cellspacing=0 margin-top=60px>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
