--- a/schedule.html
+++ b/schedule.html
@@ -9,11 +9,8 @@
     }
   </style>
   <body>
-    <header text-align='center'>
-      <h1>My Weekly Schedule</h1>
-    </header>
-    
     <table width='100%' border= '5px' color=#FF66FF text-align=center cellspacing=0 margin-top='60px'>
+    <caption text-align=center><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
