--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@
   </style>
   <body>
     <table width='100%' border= '5px' color=#FF66FF text-align=center cellspacing=0 margin-top='60px'>
-    <caption text-align=center><h1>My Weekly Schedule</h1></caption>
+    <caption class='caption' text-align=center><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th class='time'>Time</th>
         <th class='day'>Sunday</th>
