--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
     }
   </style>
   <body>
-    <table width='100%' border= '5px' color=#FF66FF text-align=center cellspacing=0 margin-top='200px'>
+    <table width='100%' border= '5px' color=#FF66FF text-align=center cellspacing=0 style="margin-top:100px;>
     <caption class='caption' text-align=center><h1>My Weekly Schedule</h1></caption>
       <tr>
         <th class='time'>Time</th>
