--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     }
     h1, h3 {color:red;
     }
+    title {
+      position:fixed;
+    }
     </style>
       <body text="yellow" link="yellow">
         <h1> Iowa State Cyclones </h1>
