--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <h3>Home Work Sectoin</h3>
           <ul style="list-style-type:none">
             <li><a href=http://whitna02.github.io/schedule.html> My Schedule </a></li>
+            <li><a href=http://whitna02.github.io/degrees.html> Temperature Converter</li>
           </ul>
           
       </body>
