--- a/bmi.html
+++ b/bmi.html
@@ -2,7 +2,8 @@
 <head>
   <title> BMI Calculator </title>
   <script>
-    
+  </script>
+</head>
 <body>
   <h1> Calculate BMI </h1>
   <p> Insert your weight in pounds: <input type="text" id="weight"/></p>
