--- a/bmi.html
+++ b/bmi.html
@@ -2,6 +2,13 @@
 <head>
   <title> BMI Calculator </title>
   <script>
+    function computeBMI() {
+      var height=Number(document.getElementById("height").value);
+      var weight=Number(document.getElementById("weight").value);
+      
+      var BMI=(weight*703)/(height*height)
+      
+    }
   </script>
 </head>
 <body>
@@ -9,6 +16,6 @@
   <p> Insert your weight in pounds: <input type="text" id="weight"/></p>
   <p>Insert your height in inches: <input type="text" id="height"/></p>
   <input type="submit" value="computeBMI" onclick="computeBMI();">
-  <br> <h3>Your BMI is: </h3>
+  <br> <h3>Your BMI is: <span id="BMI"></span></h3>
 </body>
 </html>
