--- a/addressbook.html
+++ b/addressbook.html
@@ -33,8 +33,8 @@
     <input type="text" id="email">
     <br>
     <button onclick="addentry();">Add Item</button>
-    <br>
-    <table id="addresstable">
+    
+    <br><table id="addresstable">
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
