--- a/addressbook.html
+++ b/addressbook.html
@@ -19,6 +19,9 @@
         border-width: 2px;
         border-color: blue;
       }
+      body {
+        background-color: #83FF59;
+      }
     </style>
   </head>
   <body>
