--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <ul style="list-style-type:none">
             <li><a href=http://whitna02.github.io/schedule.html> My Schedule </a></li>
             <li><a href=http://whitna02.github.io/degrees.html> Temperature Converter</li>
+            <li><a href=http://whitna02.github.io/addressbook.html> Address Book </li>
           </ul>
           
       </body>
