--- a/degrees.html
+++ b/degrees.html
@@ -12,7 +12,7 @@ function convert(degree) {
 }
 </script>
 </head>
-<body>
+<body backgroundcolor="blue">
 <p>Insert a number into one of the input fields below:</p>
 <input id="c" onkeyup="convert('C')"> degrees Celsius<br>
 equals<br> 
