--- a/degrees.html
+++ b/degrees.html
@@ -13,6 +13,7 @@ function convert(degree) {
 </script>
 </head>
 <body bgcolor="#FF8330">
+<h1>Temperature Converter</h1>
 <p>Insert a number into one of the input fields below:</p>
 <input id="c" onkeyup="convert('C')"> degrees Celsius<br>
 equals<br> 
