--- a/bmi.html
+++ b/bmi.html
@@ -2,13 +2,16 @@
     <head>
         <title>BMI Calculator</title>
     </head>
-    <body>
-        <label for="thebox">Height in Inches</label>
+    <body bgcolor="lightpink">
+        <label for="thebox"><h3>Insert Height in Inches:</h3></label>
         <input type="text" id="thebox">
-        <label for="textbox">Weight in lbs</label>
+        <br>
+        <label for="textbox"><h3>Insert Weight in Pounds:</h3></label>
         <input type="text" id="textbox">
+        <br>
         <button onclick="convert();">Calculate BMI</button>
-        <h1 id="output"></h1>
+        <br>
+        <h3>Your BMI is:</h3> <h3 id="output"></h3>
         
         <script>
             convert = function() {
